# us_flight_fare

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
flight_fare_prediction/: __init__.py  dataset.py  features.py  plots.py
flight_fare_prediction/modeling/: predict.py  train.py
models/: linear_reg_pipeline.joblib  linear_reg_pipeline1.joblib  pipe.pkl  pred_pipe_lgb12.joblib  xgb.pkl  xgb_pipeline.joblib
models/preprocessor/: preprocessor.pkl
notebooks/: faiyaz_farhan-24701183_predictive_all_models.ipynb  li_yeeting-24866954-adaboost.ipynb  li_yeeting-24866954-xgboost.ipynb  sakib_mdsadman-25091570-other-model.ipynb  sovann_ratana-25396324-XGBoost.ipynb  sovann_ratana-25396324-basic_model.ipynb  sovann_ratana-25396324-extratree_regressor.ipynb  sovann_ratana-25396324-knn_regressor.ipynb  sovann_ratana-25396324-lightgbm.ipynb  sovann_ratana-25396324-linear_reg.ipynb
notebooks/data_prep/: faiyaz_farhan-24701183_data_prep1.html  faiyaz_farhan-24701183_data_prep1.ipynb  faiyaz_farhan-24701183_data_prep2.ipynb
notebooks/data_prep_25091570/: sakib_mdsadman-25091570-datacleaning-and-analysis.ipynb
notebooks/dataprep/: sovann_ratana-25396324-dataprep.ipynb  sovann_ratana-25396324-dataprep2.ipynb
src/: custom_transformers.py  model_evaluation.py  performance.py
