[tool.poetry]
name = "adv-mla-at3"
version = "0.1.0"
description = ""
authors = ["Farhan Faiyaz <farhanfaiyaz17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
numpy = "^2.1.2"
summarytools = "^0.3.0"
isodate = "^0.7.2"
category-encoders = "^2.6.4"
lightgbm = "^4.5.0"
hyperopt = "^0.2.7"
optuna = "4.0.0"
plotly-express = "^0.4.1"
xgboost = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
